UI fixes afer homepage updates (#289)
This PR fixes a few issues across docs from recent home page updates:

- restores margin above the `.content` element and `h1` to preserve
whitespace between breadcrumbs and page content
- restores margins for all headers
- removes `height` property from labels to center-align text vertically
- comments out properties in labels that have no effect
- updates border-radius for pseudo-class labels to match other labels

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -32,7 +32,7 @@ body {
   font-weight: var(--heading-font-weight);
   hyphens: none;
   line-height: calc((var(--doc-line-height) + 1) / 2);
-  margin: 17px 0 8px;
+  margin: 2rem 0 1rem;
 }
 
 .doc h1 {
@@ -78,8 +78,8 @@ body {
 }
 
 @media screen and (min-width: 769px) {
-  .doc > .sect-header > h1.page:first-child {
-    /* margin-top: 2.5rem; */
+  .has-banner .doc > .sect-header > h1.page:first-child {
+    margin-top: 2.5rem;
   }
 }
 
